# cogito

./: .cogitorc  .gitignore  Makefile  README.md  config.yml  go.mod  go.sum  handler.go  main.go  main.py  pyproject.toml  setup.py
cogito/: __init__.py  logging.py
cogito/config/: __init__.py  app_config.py
cogito/runtime/: __init__.py  conv_manager.py  conversation.py  models.py
cogito/runtime/function_calling/: __init__.py  function_call_support.py  functions.py
cogito/textual_ui/: __init__.py  app.py  dark.tcss  light.tcss
cogito/textual_ui/screens/: __init__.py  chat_screen.py  message_info_modal.py  search_screen.py
cogito/textual_ui/widgets/: chat.py  chat_list.py  chatbox.py  footer.py  header.py  model_select.py  search.py
pkg/cogito/: cogito.go
pkg/moonshot/: client.gen.go  client.go  constants.gen.go  dto.go  generate.sh  generate_model_files.go  handler.go  request.go
pkg/translate/: test.md  translate_blog.go  translate_blog_test.go
